--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,3 @@
-spring.datasource.driver-class-name =org.h2.Driver
-spring.datasource.url = jdbc:h2:mem:testdb
-spring.datasource.username =anything
-spring.datasource.password =anything
-spring.jpa.hibernate.ddl-auto = create
-spring.jpa.show-sql= true
+server.port=8081
+spring.profiles.active=${ENV:dev}
+
